@@ -1,5 +1,9 @@
 2011-01-08  Torbjorn Granlund  <tege@gmplib.org>
 
+	* gmp-impl.h (mpn_mul_5, mpn_mul_6): Declare.
+	* mpn/asm-defs.m4: Likewise, also declare mpn_addmul_5, mpn_addmul_6,
+	mpn_addmul_7, and mpn_addmul_8.
+
 	* configure.in (gmp_mpn_functions_optional): Add mul_5 and mul_6.
 
 	* tune/speed.c (routine): Add measuring of mpn_mul_5 and mpn_mul_6.
